--- a/stylesheet.css
+++ b/stylesheet.css
@@ -66,6 +66,9 @@
 td .underline {
   border-bottom: 1px solid rgb(192, 192, 192);
 }
+tr .underline {
+  border-bottom: 1px solid rgb(192, 192, 192);
+}
 
 a {
   color: #1772d0;
